# GraphPlotter

./: CMakeLists.txt  README.md  main.cpp
widgets/CreatePointsTabDialog/: createpointstabdialog.cpp  createpointstabdialog.h  createpointstabdialog.ui
widgets/MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
widgets/PointInputTabWidget/: pointinputtabwidget.cpp  pointinputtabwidget.h  pointinputtabwidget.ui
